--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<ul class="features">
 									<li>
 										<span >
-											<img class="hooo" src="assets\css\images\Boxer.jpg" height="260" width="310" >
+											<img class="hooo" src="assets\css\images\boxer.jpg" height="260" width="310" >
 										</span>
 										<h3>Boxer Engine</h3>
 										<p>The boxer engine of the R 1250 GS fascinates from the very first glance. You can feel its character in every engine speed range, because it offers you impressive performance with more smoothness at low rotational speeds.</p>
