--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#first">Key Takeaways</a></li>
+							<li><a href="#second">Reviews</a></li>
+							<li><a href="#cta">Feedback</a></li>
 						</ul>
 					</nav>
 
